@@ -58,8 +58,7 @@ public class Profile {
     public static Profile readProfileFromFile(File f) {
         String jsonstr = "";
         try {
-            // jsonstr = Files.readString(f.toPath()); //java 11, doenst work with java 8
-            jsonstr = new String(Files.readAllBytes(f.toPath()));
+            jsonstr = Files.readString(f.toPath()); //java 11, doenst work with java 8
         } catch (IOException e) {
             e.printStackTrace();
         }
